# MATS

./: .gitignore  Analysis of ASCENDS Line Spectra.html  Applying Analytical Correction to hardness of collisions for HTP.html  CHANGELOG  Correcting the Ideal Gas Law with Compressability Factor.html  Dataset Class.html  Edit Fit Parameters File Class.html  Examples.html  Fit Dataset Class.html  Fitting Experimental Spectra.html  Fitting Synthetic Spectra.html  Fitting and Simulating isotopes and molecules not in HITRAN .html  Fitting and Simulating isotopes and molecules not in HITRAN.html  Fitting_Protocol_190222.ipynb  Generate Fit Parameters File Class.html  Generating Pandas Line lists from HITRAN.html  Generating Parameter Line lists.html  Getting Started.html  HITRAN Line-by-Line Static Molecules.html  INSTALL.md  Including instrument line shapes in simulation and fits.html  Incorporating CIA into fits.html  MANIFEST.in  MATS Example using Experimental and Synthetic Data.html  MATS Overview.html  MATS Summary.html  MATS Version Summary.html  MATS.html  Makefile  Oxygen CIA using theoretical model.html  README.md  Set-Up and Load Packages.html  Spectrum Class.html  environment-dev.yml  environment.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  (+4 more)
From DataFrame/: HAPI_MultispectrumFitting.py  HAPI_MultispectrumFitting_191010.py  HAPI_MultispectrumFitting_v1.0.py  HAPI_MultispectrumFitting_v1_0.py  HITRAN_to_Dataframe.ipynb  hapi.py  hapi_HTP_definition_dataframe_190222.py  hapi_HTP_definition_dataframe_190409.py
MATS/: Dataset.py  Edit_Fit_Param_Files.py  Fit_DataSet.py  Fit_Dataset.py  Generate_FitParam_File.py  HITRAN_to_Dataframe.ipynb  Karman_CIA.py  MATS.py  Spectrum.py  Utilities.py  __init__.py  codata.py  dataset.py  fit_dataset.py  generate_fitparam_file.py  hapi.py  linelistdata.py  o2_cia_karman.py  spectroscopic_model.py  spectrum.py  utilities.py
Original Approach with HAPI call/: Segment Etalon Fitting.ipynb  multispectrum fitting - pressure.ipynb
_modules/: Dataset.html  Fit_Dataset.html  Generate_FitParam_File.html  MATS.html  Spectrum.html  Utilities.html  dataset.html  fit_dataset.html  generate_fitparam_file.html  index.html  linelistdata.html  spectrum.html  utilities.html
_sources/: Analysis of ASCENDS Line Spectra.rst.txt  Applying Analytical Correction to hardness of collisions for HTP.rst.txt  Correcting the Ideal Gas Law with Compressability Factor.rst.txt  Dataset Class.rst.txt  Edit Fit Parameters File Class.rst.txt  Examples.rst.txt  Fit Dataset Class.rst.txt  Fitting Experimental Spectra.rst.txt  Fitting Synthetic Spectra.rst.txt  Fitting and Simulating isotopes and molecules not in HITRAN .rst.txt  Fitting and Simulating isotopes and molecules not in HITRAN.rst.txt  Generate Fit Parameters File Class.rst.txt  Generating Pandas Line lists from HITRAN.rst.txt  Generating Parameter Line lists.rst.txt  Getting Started.rst.txt  HITRAN Line-by-Line Static Molecules.rst.txt  Including instrument line shapes in simulation and fits.rst.txt  Incorporating CIA into fits.rst.txt  MATS Example using Experimental and Synthetic Data.rst.txt  MATS Overview.rst.txt  MATS Summary.rst.txt  MATS Version Summary.rst.txt  MATS.rst.txt  Oxygen CIA using theoretical model.rst.txt  Set-Up and Load Packages.rst.txt  Simulate Spectrum.rst.txt  Spectrum Class.rst.txt  hapi.rst.txt  index.rst.txt  modules.rst.txt
_static/: agogo.css  basic.css  documentation_options.js  nature.css
doctrees/: Analysis of ASCENDS Line Spectra.doctree  Applying Analytical Correction to hardness of collisions for HTP.doctree  Correcting the Ideal Gas Law with Compressability Factor.doctree  Examples.doctree  Fitting Experimental Spectra.doctree  Fitting Synthetic Spectra.doctree  Fitting and Simulating isotopes and molecules not in HITRAN.doctree  Generating Parameter Line lists.doctree  (+12 more)
(+379 files in other folders)
