
[metadata]
name = MATS
author = Erin M. Adkins
author_email = erin.adkins@nist.gov
license= NIST license
license_files = LICENSE
description = A  NIST based multi-spectrum fitting tool for spectroscopic data
# if using markdown
long_description_content_type = text/markdown
long_description = file: README.md, LICENSE
keywords = MATS
url = https://github.com/usnistgov/MATS
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: Public Domain
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering



[options]
packages = find:
zip_safe = True # if using mypy, must be False
include_package_data = True
python_requires = >=3.6
install_requires =
    setuptools >= 38.4
    # additional packages
    numpy
    pandas
    lmfit
    matplotlib
    seaborn
    scipy
    qgrid
    mpmath
    # jupyter
    jupyter

setup_requires =
    setuptools >= 38.4
    setuptools_scm


[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
testpaths = tests


[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = MATS

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc
    docs
